--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <button onclick="verde()">verde</button>
     <button onclick="vermelho()">vermelho</button>
+    <button onclick="azul()">azul</button>
     
     <script src="script.js"></script>
 </body>
